--- a/MathWebsite/index.html
+++ b/MathWebsite/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title> Math Website</title>
+        <title> Math site</title>
         <meta name="vieport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
         <link rel="stylesheet" href="style.css">
     </head>
