--- a/games/index.html
+++ b/games/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="heading"> 
-    <h1> The coolest laptops for real gamers</h1>
+    <h1> The coolest laptopsasad for real gamers</h1>
 </div>
 
     <div class="heading">
